# ros2-pick-and-place

./: .gitignore  CLAUDE.md  README.md
src/pick_and_place/: CMakeLists.txt  package.xml
src/pick_and_place/config/: controllers.yaml  joint_limits.yaml  moveit_config.yaml  moveit_controllers.yaml
src/pick_and_place/launch/: demo.launch.py  gazebo.launch.py  moveit.launch.py
src/pick_and_place/rviz/: moveit.rviz
src/pick_and_place/scripts/: metrics_logger.py  pick_and_place_node.py
src/pick_and_place/test/: test_metrics.py
src/pick_and_place/urdf/: arm.gazebo.xacro  arm.ros2_control.xacro  arm.urdf.xacro
src/pick_and_place/worlds/: table_cube.world
